[package]
name = "kube-startup-timer"
version = "0.1.0"
authors = ["Tyler Stapler <tystapler@gmail.com>"]
edition = "2018"

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[dependencies]
chrono = "0.4.0"
futures-timer = "3.0.1"
futures-util = "0.3.4"
futures = "0.3.4"
kube = { version = "0.28.1"}
k8s-openapi = { version = "0.7.1", features = ["v1_15"] }
serde = "1.0.97"
serde_derive = "1.0.97"
log = "0.4.7"
env_logger = "0.7.1"
tokio = { version = "0.2.13", features = ["full"] }
anyhow = "1.0.26"